--- a/app/src/main/res/layout/post_create_fragment.xml
+++ b/app/src/main/res/layout/post_create_fragment.xml
@@ -16,7 +16,7 @@
         app:layout_constraintBottom_toTopOf="@+id/txePostName"/>
     <EditText
         android:id="@+id/txePostName"
-        android:text=""
+        android:text="@string/test_string"
         android:maxLines="1"
         android:ellipsize="end"
         android:layout_width="match_parent"
