--- a/app/src/main/res/layout/post_row_view.xml
+++ b/app/src/main/res/layout/post_row_view.xml
@@ -2,12 +2,29 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="wrap_content"
-    android:layout_width="match_parent">
+    android:layout_width="match_parent"
+    android:orientation="horizontal">
+    <CheckBox
+        android:layout_gravity="center"
+        android:id="@+id/checkboxPost"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"/>
     <TextView
-        android:id="@+id/txtPostName"
-        android:textSize="50sp"
-        android:ellipsize="end"
-        android:maxLines="1"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+            android:layout_gravity="center"
+            android:id="@+id/txtPostName"
+            android:textSize="30sp"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:text="@string/test_long_name"
+            android:layout_weight="5"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"/>
+    <ImageButton
+        android:src="@drawable/ic_delete"
+        android:layout_gravity="center"
+        android:id="@+id/btnDelete"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"/>
 </LinearLayout>
