--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -10,4 +10,8 @@
           app:showAsAction="ifRoom"
           android:visible="false"
           android:title="@string/create_post" />
+    <item android:id="@+id/menuDelete"
+          app:showAsAction="ifRoom"
+          android:visible="false"
+          android:title="@string/delete_checked" />
 </menu>
